# auto-mailing

./: README.md  basic-compose.yml  pyproject.toml
src/: manage.py
src/automailing/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/modules/mailing/: admin.py  apps.py  models.py  selectors.py  tasks.py
src/modules/mailing/migrations/: 0001_initial.py  0002_alter_mailing_start_date_alter_operator_index.py  0003_alter_message_options_remove_message_is_sent_and_more.py  0004_alter_customer_phone_alter_mailing_start_date.py  0005_alter_mailing_start_date_alter_mailing_stop_date.py  0006_alter_customer_phone_alter_mailing_start_date_and_more.py  0007_alter_customer_phone_alter_mailing_start_date_and_more.py  0008_remove_operator_index_alter_customer_phone_and_more.py  0009_mailing_is_completed_mailing_is_started_and_more.py  0010_alter_mailing_start_date_alter_mailing_stop_date.py
src/modules/mailing/rest/: serializers.py  urls.py  views.py
src/modules/mailing/services/: api.py
src/utils/: openapi_schema_generator.py
